Update dependencies, migrated from deprecated APIs